finalised refactoring of throwing exceptions by using static planitexception method